[ADMINAPI-1028] Admin API to implement sorting and filtering on endpoints with "direction" and "orderBy" (#131)
* ADMINAPI-1028 Admin API to implement sorting and filtering on endpoints with "direction" and "orderBy"

* Replace sortBy by orderBy
* Replace descendingSort by direction to use Asc or Desc instead of the boolean
* Update documentation

* Update definition to set SorDirection as optional

* Update namespace
