# Application/EdFi.Ods.AdminApi/Infrastructure/Database/Queries/GetVendorsQuery.cs
@@ -13,7 +13,7 @@ namespace EdFi.Ods.AdminApi.Infrastructure.Database.Queries;
 public interface IGetVendorsQuery
 {
     List<Vendor> Execute();
-    List<Vendor> Execute(int offset, int limit, string? sortBy, bool? descendingSorting, int? id, string? company, string? namespacePrefixes, string? contactName, string? contactEmailAddress);
+    List<Vendor> Execute(int offset, int limit, string? orderBy, string sortDirection, int? id, string? company, string? namespacePrefixes, string? contactName, string? contactEmailAddress);
 }
 
 public class GetVendorsQuery : IGetVendorsQuery
@@ -39,7 +39,7 @@ public class GetVendorsQuery : IGetVendorsQuery
             .OrderBy(v => v.VendorName).Where(v => !VendorExtensions.ReservedNames.Contains(v.VendorName.Trim())).ToList();
     }
 
-    public List<Vendor> Execute(int offset, int limit, string? sortBy, bool? descendingSorting, int? id, string? company, string? namespacePrefixes, string? contactName, string? contactEmailAddress)
+    public List<Vendor> Execute(int offset, int limit, string? orderBy, string? sortDirection, int? id, string? company, string? namespacePrefixes, string? contactName, string? contactEmailAddress)
     {
         return _context.Vendors
             .Where(c => id == null || id < 1 || c.VendorId == id)
